# mcp-bank

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: AGENTS.md
.github/workflows/: ci.yml  deploy.yml
code-executor/: README.md
docs/: ANALYSIS.md  ARCHITECTURE.md  MCP-IDEAS-EXECUTIVE-SUMMARY.md  MCP-IDEAS-TOP15.md  OPPORTUNITY.md  ROADMAP.md
memory-store/: .env.example  Dockerfile  README.md  SPEC.md  fly.toml  pyproject.toml
memory-store/src/app/: main.py
memory-store/src/app/discovery/: a2a.py  mcp.py
memory-store/src/app/memory/: store.py
memory-store/src/app/models/: schemas.py
memory-store/src/app/routes/: health.py  memory.py
memory-store/tests/: test_memory.py
shared/: a2a_card.py  errors.py  mcp_handler.py  metering.py  x402_middleware.py
structured-extractor/: .env.example  Dockerfile  README.md  SPEC.md  fly.toml  pyproject.toml
structured-extractor/src/app/: main.py
structured-extractor/src/app/discovery/: a2a.py  mcp.py
structured-extractor/src/app/extraction/: cleaner.py  fast_extract.py  fetcher.py  image_extract.py  llm_extract.py  pipeline.py
structured-extractor/src/app/middleware/: cache.py
structured-extractor/src/app/models/: schemas.py
structured-extractor/src/app/routes/: extraction.py  health.py
structured-extractor/tests/: test_extraction.py  test_routes.py
transform-agent/: .env.example  Dockerfile  README.md  SPEC.md  fly.toml  pyproject.toml
transform-agent/src/app/: main.py
transform-agent/src/app/discovery/: a2a.py  mcp.py
transform-agent/src/app/middleware/: cache.py
transform-agent/src/app/models/: schemas.py
transform-agent/src/app/routes/: health.py  transform.py
transform-agent/src/app/transforms/: documents.py  encoding.py  markup.py  registry.py  schema_ops.py  tabular.py
transform-agent/tests/: test_routes.py  test_transforms.py
